FIX - scrollbar and analytics

--- a/style/partials/_layout.scss
+++ b/style/partials/_layout.scss
@@ -112,14 +112,13 @@
     font-weight: 400;
 }
 
-html {
-    overflow: scroll;
-    overflow-x: hidden;
-}
-::-webkit-scrollbar {
-    width: 0;  /* Remove scrollbar space */
-    background: transparent;  /* Optional: just make scrollbar invisible */
-}
+.scrollable-content::-webkit-scrollbar {
+    display: none;
+  }
+
+.scrollable-content {
+    -ms-overflow-style: none;
+} 
 
 
 /* Media query SMARTPHONE ____________________________________________________________ */
